@@ -1,4 +1,7 @@
 Changes to Version 2.0-11
+  o the arguments to deltaMethod have changed, with parameterPrefix replaced by parameterNames.  See doucmentation for useage.
+  
+  o deltaMethod methods for lmList, nlsList, and mer objects have been added.  The syntax for the multinom method has been improved.
 
   o the 'layout' argument is used in several graphical functions to deterine the layout of multiple graphs within the same graphical window.  Setting layout=NA in these functions suppresses this behavior and the user can set the layout outside the function (suggested by Steve Milborrow)
 
